# time-limit

./: .editorconfig  .gitignore  README.md  com.github.marbetschar.time-limit.yml  install.sh  meson.build  uninstall.sh
.github/ISSUE_TEMPLATE/: config.yml
daemon/: DBusService.vala  Daemon.vala  meson.build
data/: Clock.css  Face.css  Labels.css  Main.css  MainWindow.css  ProgressHandle.css  com.github.marbetschar.time-limit-daemon.desktop.in  com.github.marbetschar.time-limit.appdata.xml.in  com.github.marbetschar.time-limit.desktop.in  com.github.marbetschar.time-limit.gresource.xml  com.github.marbetschar.time-limit.gschema.xml  com.github.marbetschar.timing.appdata.xml.in  com.github.marbetschar.timing.desktop.in  gresource.xml  gschema.xml  meson.build  name.betschart.marco.timer.appdata.xml  name.betschart.marco.timer.desktop  timer.appdata.xml.in  timer.desktop.in
data/screenshots/: Dark-Light-Accent-Variants.xcf
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  com.github.marbetschar.time-limit.pot  com.github.marbetschar.timing.pot  de.po  fr.po  name.betschart.marco.timer.pot  nl.po  pt.po  pt_BR.po  ru.po
po/extra/: LINGUAS  POTFILES  extra.pot  fr.po  nl.po  pt.po  pt_BR.po  ru.po
src/: Application.vala  DBusService.vala  LoginManager.vala  MainWindow.vala  Util.vala  meson.build
src/Widgets/: Arrow.vala  Clock.vala  Face.vala  Labels.vala  ProgressArrow.vala  ProgressBar.vala  ProgressHandle.vala  ProgressIndicator.vala
tests/: Tests.vala  Util.vala  meson.build
vapi/: glib-2.0-fixes.vapi
